--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 <body>
     <h1>ACS_Projet 10 </h1>
     
+  <form>
+      <input type="text" placeholder="Rechercher">
+      <button>valider</button>
 
+      <div class="search-result">
+          <div class="item">
+              <img src="IMG/test.jpeg" alt="">
+              <div class="container">
+                  <h1 class="title">RECETTE</h1>
+                  <a href="#">Voir la recette</a>
+              </div>
+              <p class="infos">Calories: 120</p>
+          </div>
+      </div>
+  </form>
     <script src="js/app.js"></script>
 </body>
 </html>
