--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <ion-icon name="search"></ion-icon>
         </form>
 
-            <!-- <div class="result">
-                <div class="item">
+            <div class="result">
+                <!-- <div class="item">
                     <img src="IMG/test.jpeg" alt="">
                     <div class="flex-container">
                         <h1 class="title">RECETTE</h1>
